commented out userdir usage in apache config

--- a/bootstrap/config/httpd.conf
+++ b/bootstrap/config/httpd.conf
@@ -116,7 +116,7 @@ LoadModule dir_module modules/mod_dir.so
 LoadModule imagemap_module modules/mod_imagemap.so
 LoadModule actions_module modules/mod_actions.so
 LoadModule speling_module modules/mod_speling.so
-LoadModule userdir_module modules/mod_userdir.so
+# LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
@@ -454,7 +454,7 @@ Include conf/extra/httpd-autoindex.conf
 Include conf/extra/httpd-languages.conf
 
 # User home directories
-Include conf/extra/httpd-userdir.conf
+# Include conf/extra/httpd-userdir.conf
 
 # Real-time info on requests and configuration
 #Include conf/extra/httpd-info.conf
