--- a/bootstrap/config/httpd.conf
+++ b/bootstrap/config/httpd.conf
@@ -119,6 +119,7 @@ LoadModule speling_module modules/mod_speling.so
 # LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule php5_module modules/libphp5.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
@@ -403,7 +404,7 @@ DefaultType text/plain
 # contents of the file itself to determine its type.  The MIMEMagicFile
 # directive tells the module where the hint definitions are located.
 #
-#MIMEMagicFile conf/magic
+MIMEMagicFile conf/magic
 
 #
 # Customizable error responses come in three flavors:
@@ -470,6 +471,8 @@ Include conf/extra/httpd-languages.conf
 
 # Various default settings
 Include conf/extra/httpd-default.conf
+
+Include conf/extra/php5_module.conf
 
 # Secure (SSL/TLS) connections
 #Include conf/extra/httpd-ssl.conf
