--- a/bootstrap/config/httpd.conf
+++ b/bootstrap/config/httpd.conf
@@ -197,7 +197,7 @@ DocumentRoot "/vagrant/http"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/srv/http">
+<Directory "/vagrant/http">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
