--- a/bootstrap/config/php.ini
+++ b/bootstrap/config/php.ini
@@ -306,7 +306,7 @@ serialize_precision = 17
 ; or per-virtualhost web server configuration file. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/open-basedir
-open_basedir = /vagrant/http/:/home/:/tmp/:/usr/share/pear/:/usr/share/webapps/:/vagrant/flow
+open_basedir = /vagrant/http/:/home/:/tmp/:/usr/share/pear/:/usr/share/webapps/:/vagrant/flow:/usr/bin
 
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
@@ -885,13 +885,13 @@ extension=gettext.so
 ;extension=mysql.so
 ;extension=odbc.so
 ;zend_extension=opcache.so
-;extension=openssl.so
+extension=openssl.so
 ;extension=pdo_mysql.so
 ;extension=pdo_odbc.so
 ;extension=pdo_pgsql.so
 ;extension=pdo_sqlite.so
 ;extension=pgsql.so
-;extension=phar.so
+extension=phar.so
 ;extension=posix.so
 ;extension=pspell.so
 ;extension=shmop.so
@@ -905,7 +905,7 @@ extension=gettext.so
 ;extension=tidy.so
 ;extension=xmlrpc.so
 ;extension=xsl.so
-;extension=zip.so
+extension=zip.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
