--- a/bootstrap/config/httpd.conf
+++ b/bootstrap/config/httpd.conf
@@ -290,6 +290,13 @@ LogLevel warn
     #CustomLog "/var/log/httpd/access_log" combined
 </IfModule>
 
+<IfModule mod_negotiation.c>
+
+        # prevents Apache's automatic file negotiation, it breaks resource URLs
+        Options -MultiViews
+
+</IfModule>
+
 <IfModule alias_module>
     #
     # Redirect: Allows you to tell clients about documents that used to 
@@ -461,7 +468,7 @@ Include conf/extra/httpd-languages.conf
 #Include conf/extra/httpd-info.conf
 
 # Virtual hosts
-#Include conf/extra/httpd-vhosts.conf
+Include conf/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include conf/extra/httpd-manual.conf
