--- a/bootstrap/config/httpd.conf
+++ b/bootstrap/config/httpd.conf
@@ -170,7 +170,7 @@ ServerAdmin you@example.com
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/vagrant/http"
+DocumentRoot "/srv/http/flow/Web"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -197,7 +197,7 @@ DocumentRoot "/vagrant/http"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory "/vagrant/flow">
+<Directory "/srv/http/flow">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
@@ -227,35 +227,6 @@ DocumentRoot "/vagrant/http"
 
 </Directory>
 
-<Directory "/vagrant/http">
-    #
-    # Possible values for the Options directive are "None", "All",
-    # or any combination of:
-    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
-    #
-    # Note that "MultiViews" must be named *explicitly* --- "Options All"
-    # doesn't give it to you.
-    #
-    # The Options directive is both complicated and important.  Please see
-    # http://httpd.apache.org/docs/2.2/mod/core.html#options
-    # for more information.
-    #
-    Options Indexes FollowSymLinks
-
-    #
-    # AllowOverride controls what directives may be placed in .htaccess files.
-    # It can be "All", "None", or any combination of the keywords:
-    #   Options FileInfo AuthConfig Limit
-    #
-    AllowOverride None
-
-    #
-    # Controls who can get stuff from this server.
-    #
-    Order allow,deny
-    Allow from all
-
-</Directory>
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
@@ -498,7 +469,7 @@ Include conf/extra/httpd-languages.conf
 #Include conf/extra/httpd-info.conf
 
 # Virtual hosts
-Include conf/extra/httpd-vhosts.conf
+#Include conf/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include conf/extra/httpd-manual.conf
