--- a/bootstrap/config/php.ini
+++ b/bootstrap/config/php.ini
@@ -306,7 +306,7 @@ serialize_precision = 17
 ; or per-virtualhost web server configuration file. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/open-basedir
-open_basedir = /vagrant/http/:/home/:/tmp/:/usr/share/pear/:/usr/share/webapps/:/vagrant/flow:/usr/bin
+open_basedir = /home/:/tmp/:/usr/share/pear/:/usr/share/webapps/:/vagrant:/srv/http:/usr/bin
 
 ; This directive allows you to disable certain functions for security reasons.
 ; It receives a comma-delimited list of function names. This directive is
