fixed pdomysql modul integration

--- a/bootstrap/config/php.ini
+++ b/bootstrap/config/php.ini
@@ -886,7 +886,7 @@ extension=gettext.so
 ;extension=odbc.so
 ;zend_extension=opcache.so
 extension=openssl.so
-;extension=pdo_mysql.so
+extension=pdo_mysql.so
 ;extension=pdo_odbc.so
 ;extension=pdo_pgsql.so
 ;extension=pdo_sqlite.so
