enabled xslt support

--- a/bootstrap/config/php.ini
+++ b/bootstrap/config/php.ini
@@ -904,7 +904,7 @@ extension=phar.so
 ;extension=sysvshm.so
 ;extension=tidy.so
 ;extension=xmlrpc.so
-;extension=xsl.so
+extension=xsl.so
 extension=zip.so
 
 ;;;;;;;;;;;;;;;;;;;
